gccida/g0/copy_to_reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_to_reg/src/explow.c:1139:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_to_reg/src/obj/explow.o] Error 1
